k8s/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: gateway-container
          image: ghcr.io/alkamal30/shrink-link/gateway:latest
          ports:
            - containerPort: 8080
